--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    MarginTop = "?attr/actionBarSize"
+    android:fitsSystemWindows="true"
+    android:id="@+id/drawer"
+    >
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+      >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
@@ -15,29 +22,35 @@
        android:layout_height="wrap_content"
        android:id="@+id/main_toolbaar"
        app:layout_collapseMode="pin"
+       style="@style/Toolbar.TitleText"
+       app:titleTextColor="@color/white"
        android:background="@color/colorPrimary"
+       app:layout_scrollFlags="scroll|enterAlways|snap"
        >
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
 
-         <ImageView
-             android:id="@+id/toolbaar_icon"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:src="@drawable/ic_notification"
-             android:tint="@color/white"
-             />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-            android:textSize="18sp"
-             android:textAllCaps="true"
             android:text="Interview"
-            android:textColor="@color/white"
-             android:layout_toRightOf="@id/toolbaar_icon"
-             android:layout_marginLeft="15dp"
+             android:textColor="@color/white"
+             android:textSize="20sp"
+             android:textStyle="bold"
+             android:layout_centerVertical="true"
             />
+         <ImageView
+             android:id="@+id/toolbaar_icon"
+             android:layout_width="32dp"
+             android:layout_height="32dp"
+             android:src="@drawable/ic_notification"
+             android:tint="@color/white"
+             android:layout_alignParentEnd="true"
+             android:layout_marginRight="30dp"
+             />
+
+
       </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
 
@@ -89,6 +102,20 @@
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp" />
+
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+      android:layout_alignParentEnd="true"
+      android:layout_below="@id/slider"
+      android:text="View all >"
+      android:textStyle="bold"
+       android:id="@+id/view_all"
+       android:textColor="@color/black"
+       android:layout_marginRight="20dp"
+       android:layout_marginTop="5dp"
+      />
+
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
@@ -189,4 +216,20 @@
    </LinearLayout>
 
    </RelativeLayout>
-</ScrollView>
+   </ScrollView>
+   <com.google.android.material.navigation.NavigationView
+       android:layout_width="250dp"
+       android:layout_height="match_parent"
+       android:id="@+id/nevigation"
+       android:layout_gravity="start"
+       app:headerLayout="@layout/navigation_header"
+       android:background="#9AAC10D7"
+       app:menu="@menu/navigation_menu"
+       app:itemTextColor="@color/white"
+       app:itemTextAppearance="@style/MenuItems"
+       app:itemIconTint="@color/white"
+       app:itemIconSize="18dp"
+       android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+   </com.google.android.material.navigation.NavigationView>
+
+</androidx.drawerlayout.widget.DrawerLayout>
