--- a/app/src/main/res/layout/topicslist.xml
+++ b/app/src/main/res/layout/topicslist.xml
@@ -13,8 +13,12 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"
-        >
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingRight="5dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="5dp">
 
         <TextView
 
@@ -22,8 +26,8 @@
             android:layout_height="wrap_content"
             android:textColor="#FFF"
             android:textSize="18sp"
-            android:text="hello"
-            android:paddingLeft="20dp"
+            android:layout_marginRight="30dp"
+            android:layout_centerVertical="true"
             android:layout_marginTop="2dp"
             android:id="@+id/tv_topicName"
 
@@ -35,8 +39,7 @@
             android:textSize="12sp"
             android:textColor="#FF9800"
             android:text="hello"
-            android:layout_marginTop="5dp"
-            android:paddingLeft="20dp"
+            android:layout_marginTop="10dp"
             android:gravity="center_vertical"
             android:layout_below="@+id/tv_topicName"
             />
@@ -46,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_chevron_right"
-            android:tint="#FFF"
+            android:tint="#FF9800"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true" />
