--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,12 @@
     <color name="btnBackground">#353B4B</color>
     <color name="white">#FFF</color>
     <color name="black">#000000</color>
+    <color name="blue">#2196F3</color>
+    <color name="darkBlue">#0167B6</color>
+    <color name="gray">#919191</color>
+    <color name="Mediumgray">#737373</color>
+    <color name="Darkgray">#494949</color>
+
 
 
 </resources>
